# orbital-playground

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
examples/: plot_hohmann.py  sample.tle  sample_orbit.json
orbital_playground/: __init__.py  cli.py  constants.py  delta_v.py  explain.py  kepler.py  missions.py  rockets.py  visualise.py
orbital_playground.egg-info/: SOURCES.txt  requires.txt
tests/: test_delta_v.py  test_missions.py  test_rocket.py
